--- a/EntreGaudium/app/src/main/AndroidManifest.xml
+++ b/EntreGaudium/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ProfileActivity">
+
+        </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
